--- a/app/package.json
+++ b/app/package.json
@@ -73,6 +73,8 @@
     "react-draggable": "^4.4.4",
     "react-globe": "^5.0.2",
     "react-grid-layout": "^1.3.3",
+    "react-gtm-module": "^2.0.11",
+    "react-helmet": "^6.1.0",
     "react-json-view": "^1.19.1",
     "react-lodash": "^0.1.2",
     "react-markdown": "^5.0.3",
