--- a/app/package.json
+++ b/app/package.json
@@ -54,6 +54,10 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@mui/lab": "^5.0.0-alpha.84",
     "@types/react": "^16.14.2",
     "axios": "^0.21.4",
     "classnames": "^2.2.6",
